--- a/infrastucture/Cotr.DataDB/Cotr.DataDB.csproj
+++ b/infrastucture/Cotr.DataDB/Cotr.DataDB.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\domain\Cotr\Cotr.csproj" />
+  </ItemGroup>
+
 </Project>
