--- a/Cotr.CotAPI/Cotr.CotAPI.csproj
+++ b/Cotr.CotAPI/Cotr.CotAPI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="18.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\domain\Cotr\Cotr.csproj" />
   </ItemGroup>
 
