--- a/presentation/Cotr.WindowsForms/App.config
+++ b/presentation/Cotr.WindowsForms/App.config
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+
+  <connectionStrings>
+    <add name="LiteDb" connectionString="Filename=C:\db\cotr.litedb4.db; Password=1234; Mode=Exclusive;" />
+  </connectionStrings>
+
+  <appSettings>
+    <!-- * Infrastucture * -->
+
+    <!-- CotDataRepository -->
+    <add key="archiveUrl" value="https://www.cftc.gov/files/dea/history/" />
+
+    <add key="commodityArcFileName" value="fut_disagg_txt_2020.zip" />
+    <add key="commodityArcFileCsv" value="f_year.txt" />
+
+    <add key="financialArcFileName" value="fut_fin_txt_2020.zip" />
+    <add key="financialArcFileCsv" value="FinFutYY.txt" />
+
+    <add key="tmpDir" value="C:\tmp\" />
+  </appSettings>
 </configuration>
