--- a/Cotr.CotAPI/Cotr.CotAPI.csproj
+++ b/Cotr.CotAPI/Cotr.CotAPI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="18.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
