--- a/infrastucture/Cotr.DataDB/Cotr.DataDB.csproj
+++ b/infrastucture/Cotr.DataDB/Cotr.DataDB.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="LiteDB" Version="5.0.9" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
