change db connect, add market symbol collection

--- a/presentation/Cotr.WindowsForms/App.config
+++ b/presentation/Cotr.WindowsForms/App.config
@@ -5,7 +5,7 @@
   </startup>
 
   <connectionStrings>
-    <add name="LiteDb" connectionString="Filename=C:\db\cotr.litedb4.db; Password=1234; Mode=Exclusive;" />
+    <add name="LiteDb" connectionString="Filename=C:\db\cotr.litedb4.db; Password=1234; Mode=Shared;" />
   </connectionStrings>
 
   <appSettings>
@@ -14,12 +14,14 @@
     <!-- CotDataRepository -->
     <add key="archiveUrl" value="https://www.cftc.gov/files/dea/history/" />
 
+    <add key="wDir" value="C:\tmp\" />
+
     <add key="commodityArcFileName" value="fut_disagg_txt_2020.zip" />
     <add key="commodityArcFileCsv" value="f_year.txt" />
 
     <add key="financialArcFileName" value="fut_fin_txt_2020.zip" />
     <add key="financialArcFileCsv" value="FinFutYY.txt" />
 
-    <add key="tmpDir" value="C:\tmp\" />
+    <add key="DicMarketSymbolFileName" value="dicMarketSymbol.csv" />
   </appSettings>
 </configuration>
