--- a/infrastucture/Cotr.DataDB/Cotr.DataDB.csproj
+++ b/infrastucture/Cotr.DataDB/Cotr.DataDB.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Cotr.CotAPI\Cotr.CotAPI.csproj" />
     <ProjectReference Include="..\..\domain\Cotr\Cotr.csproj" />
   </ItemGroup>
 
