--- a/presentation/Cotr.WindowsForms/App.config
+++ b/presentation/Cotr.WindowsForms/App.config
@@ -12,14 +12,16 @@
     <!-- * Infrastucture * -->
 
     <!-- CotDataRepository -->
+    <add key="dataDepthInYears" value="2" />
+
     <add key="archiveUrl" value="https://www.cftc.gov/files/dea/history/" />
 
     <add key="wDir" value="C:\tmp\" />
 
-    <add key="commodityArcFileName" value="fut_disagg_txt_2020.zip" />
+    <add key="commodityArcFileName" value="fut_disagg_txt_xxxx.zip" />
     <add key="commodityArcFileCsv" value="f_year.txt" />
 
-    <add key="financialArcFileName" value="fut_fin_txt_2020.zip" />
+    <add key="financialArcFileName" value="fut_fin_txt_xxxx.zip" />
     <add key="financialArcFileCsv" value="FinFutYY.txt" />
 
     <add key="DicMarketSymbolFileName" value="dicMarketSymbol.csv" />
