add update data from the last report

--- a/presentation/Cotr.WindowsForms/App.config
+++ b/presentation/Cotr.WindowsForms/App.config
@@ -15,14 +15,17 @@
     <add key="dataDepthInYears" value="2" />
 
     <add key="archiveUrl" value="https://www.cftc.gov/files/dea/history/" />
+    <add key="reportUrl" value="https://www.cftc.gov/dea/newcot/" />
 
     <add key="wDir" value="C:\tmp\" />
 
     <add key="commodityArcFileName" value="fut_disagg_txt_xxxx.zip" />
     <add key="commodityArcFileCsv" value="f_year.txt" />
+    <add key="commodityReportFileCsv" value="f_disagg.txt" />
 
     <add key="financialArcFileName" value="fut_fin_txt_xxxx.zip" />
     <add key="financialArcFileCsv" value="FinFutYY.txt" />
+    <add key="financialReportFileCsv" value="FinFutWk.txt" />
 
     <add key="DicMarketSymbolFileName" value="dicMarketSymbol.csv" />
   </appSettings>
